--- a/src/components/MMenu/index.module.less
+++ b/src/components/MMenu/index.module.less
@@ -3,13 +3,11 @@
 .menuContainer {
   overflow-y: auto;
   overflow-x: hidden;
-  position: relative;
 }
 
-.menuHeader {
-  padding-top: 20px;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-  background-color: @dark;
+.toggleMenuBtn {
+  position: absolute;
+  right: -80px;
+  top: 20px;
+  z-index: 2;
 }
