--- a/src/components/MHeader/index.module.less
+++ b/src/components/MHeader/index.module.less
@@ -1,8 +1,7 @@
 .headerContainer {
-  height: 120px;
   background: url("../../assets/images/navbarCover.jpg") no-repeat center center;
   background-size: 100% 100%;
-  padding: 20px 10px 10px;
+  padding: 10px 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
