--- a/src/global.less
+++ b/src/global.less
@@ -1,4 +1,7 @@
 @import './assets/less/theme.less';
+@import '~antd/es/style/themes/default.less';
+
+@pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 
 .app {
     display: flex;
@@ -41,4 +44,13 @@
     outline: none;
     transition: color ease 0.5s;
     .clickAble
+}
+
+.hoverEffect {
+    &:hover {
+        background: @pro-header-hover-bg;
+    }
+    &:global(.opened) {
+        background: @pro-header-hover-bg;
+    }
 }
