--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -1,3 +1,4 @@
 @dark: #001529;
 @globalColor: #1683f0;
-@fontGrayColor: rgba(0, 0, 0, 0.65)
+@fontGrayColor: rgba(0, 0, 0, 0.65);
+@pro-header-hover-bg: rgba(0, 0, 0, 0.025);
