--- a/src/global.less
+++ b/src/global.less
@@ -18,8 +18,10 @@
     flex-direction: column;
     flex: 1;
     margin-top: 10px;
+    padding: 20px;
     box-sizing: border-box;
     overflow: auto;
+    background-color: #fff;
 }
 
 .pointer:hover {
